--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "ecmaFeatures": {
+    "jsx": true
+  },
+  "plugins": ["react", "prettier"]
 }
