--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@react-three/drei": "^9.84.2",
+    "@react-three/fiber": "^8.14.2",
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
@@ -20,6 +22,7 @@
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.1",
     "lucide-react": "^0.268.0",
+    "maath": "^0.9.0",
     "next": "13.4.19",
     "next-themes": "^0.2.1",
     "postcss": "8.4.28",
