--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@prisma/client": "^5.3.1",
     "@react-three/drei": "^9.84.2",
     "@react-three/fiber": "^8.14.2",
     "@types/node": "20.5.1",
@@ -33,5 +34,8 @@
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
     "usehooks-ts": "^2.9.1"
+  },
+  "devDependencies": {
+    "prisma": "^5.3.1"
   }
 }
